--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     , "stylus": "*"
     , "nib": "*"
     , "markdown": "*"
+    , "sip-websocket" : "*"
   }
   , "scripts": {
     "test": "mocha"
